# mitkCore

./: CMakeLists.txt  files.cmake  mitkCoreConfig.cmake.in
include/: mitkExceptionMacro.h
src/IO/: mitkLog.cpp
